--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -1,17 +1,35 @@
-div {
-	width: 390px;
+#container{
+	width: 1030px;
+	border: 2px solid blue;
+}
+
+#delete{
+	width: 600px;
+	border: 2px solid blue;
 	margin-left: auto;
 	margin-right: auto;
-	border: 2px solid blue;
+}
+
+#delete div {
+	float: none;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+div {
+	width: 395px;
+	float: left;
 }
 
 #list_product {
 	width: 600px;
+	float: right;
 }
 
 #list_product table {
 	border: 1px solid gray;
 	border-collapse: collapse;
+	margin: 5px
 }
 
 
@@ -47,6 +65,7 @@ input {
 
 input[type=text]{
 	width: 250px;
+	float: right;
 }
 
 input[type=radio]:last-child {
@@ -115,7 +134,6 @@ div form table span {
 
 #error {
 	background-color: #feb32f;
-	padding: 15px;
 	color: #b0010e;
 }
 
