CRUD for products. Layout finallize

--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -1,148 +1,223 @@
-#container{
-	width: 1030px;
-	border: 2px solid blue;
-}
-
-#delete{
-	width: 600px;
-	border: 2px solid blue;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#delete div {
-	float: none;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-div {
-	width: 395px;
-	float: left;
-}
-
-#list_product {
-	width: 600px;
-	float: right;
-}
-
-#list_product table {
-	border: 1px solid gray;
-	border-collapse: collapse;
-	margin: 5px
-}
-
-
-
-#list_product table td {
-	padding-left: 5px;
-	padding-right:5px;
-	border: 1px solid gray;
-}
-
-#list_product table thead td {
-	font-weight: bold;
-	background-color: lightblue;
-	text-align: center
-}
-
-#list_product table tbody td:nth-child(6), td:nth-child(5) {
-	text-align: right;
-}
-
-#list_product table tbody td:first-child {
-	text-align: center;
-}
-
-#list_product table tbody tr:nth-child(even) {
-	background-color: lightgreen;
-}
-
-
-input {
-	margin-top: 5px;
-}
-
-input[type=text]{
-	width: 250px;
-	float: right;
-}
-
-input[type=radio]:last-child {
-	margin-left: 21px;
-}
-
-input[type=submit] {
-	width: 100px;
-	height: 50px;
-}
-
-select {
-	width: 200px;
-}
-
-div form table {
-	margin: 10px 10px;
-}
-
-div form  table tr td {
-	background-color: #CCCCFF;
-	padding: 5px 5px;
-}
-
-div form table tr:first-child {
-	 text-align: center;
-}
-
-div form table tr:first-child h1 {
-	margin-top: 5px;
-	margin-bottom: 10px;
-}
-
-div form table tr:last-child {
-	text-align: center;
-}
-
-div form table span {
-	color: red;
-}
-
-#data_display {
-	background: #33FFCC;
-}
-
-#data_display h1 {
-	font-size: 1.9em;
-	color: #FF9967;
-	margin-top: 5px;
-	margin-bottom: 10px;
-	
-}
-
-#data_display table {
-	margin: 10px 10px;
-}
-
-#data_display table td {
-	padding: 5px;
-}
-
-#data_display table tr:not(:first-child) td:first-child {
-	font-weight: bold;
-	width: 220px;
-}
-
-#error {
-	background-color: #feb32f;
-	color: #b0010e;
-}
-
-#error h1{
-	width: 100%;
-	border-bottom: 2px solid gray;
-}
-
-
-
-
-
+ body {
+        color: #566787;
+		background: #f5f5f5;
+		font-family: 'Varela Round', sans-serif;
+		font-size: 13px;
+	}
+	.table-wrapper {
+        background: #fff;
+        padding: 20px 25px;
+        margin: 30px 0;
+		border-radius: 3px;
+        box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    }
+	.table-title {        
+		padding-bottom: 15px;
+		background: #435d7d;
+		color: #fff;
+		padding: 16px 30px;
+		margin: -20px -25px 10px;
+		border-radius: 3px 3px 0 0;
+    }
+    .table-title h2 {
+		margin: 5px 0 0;
+		font-size: 24px;
+	}
+	.table-title .btn-group {
+		float: right;
+	}
+	.table-title .btn {
+		color: #fff;
+		float: right;
+		font-size: 13px;
+		border: none;
+		min-width: 50px;
+		border-radius: 2px;
+		border: none;
+		outline: none !important;
+		margin-left: 10px;
+	}
+	.table-title .btn i {
+		float: left;
+		font-size: 21px;
+		margin-right: 5px;
+	}
+	.table-title .btn span {
+		float: left;
+		margin-top: 2px;
+	}
+	.table-title .title-search{
+		color: black;
+		text-align: start;
+	}
+    table.table tr th, table.table tr td {
+        border-color: #e9e9e9;
+		padding: 12px 15px;
+		vertical-align: middle;
+    }
+	table.table tr th:first-child {
+		width: 60px;
+	}
+	table.table tr th:last-child {
+		width: 100px;
+	}
+    table.table-striped tbody tr:nth-of-type(odd) {
+    	background-color: #fcfcfc;
+	}
+	table.table-striped.table-hover tbody tr:hover {
+		background: #f5f5f5;
+	}
+    table.table th i {
+        font-size: 13px;
+        margin: 0 5px;
+        cursor: pointer;
+    }	
+    table.table td:last-child i {
+		opacity: 0.9;
+		font-size: 22px;
+        margin: 0 5px;
+    }
+	table.table td a {
+		font-weight: bold;
+		color: #566787;
+		display: inline-block;
+		text-decoration: none;
+		outline: none !important;
+	}
+	table.table td a:hover {
+		color: #2196F3;
+	}
+	table.table td a.edit {
+        color: #FFC107;
+    }
+    table.table td a.delete {
+        color: #F44336;
+    }
+    table.table td i {
+        font-size: 19px;
+    }
+	table.table .avatar {
+		border-radius: 50%;
+		vertical-align: middle;
+		margin-right: 10px;
+	}
+    .pagination {
+        float: right;
+        margin: 0 0 5px;
+    }
+    .pagination li a {
+        border: none;
+        font-size: 13px;
+        min-width: 30px;
+        min-height: 30px;
+        color: #999;
+        margin: 0 2px;
+        line-height: 30px;
+        border-radius: 2px !important;
+        text-align: center;
+        padding: 0 6px;
+    }
+    .pagination li a:hover {
+        color: #666;
+    }	
+    .pagination li.active a, .pagination li.active a.page-link {
+        background: #03A9F4;
+    }
+    .pagination li.active a:hover {        
+        background: #0397d6;
+    }
+	.pagination li.disabled i {
+        color: #ccc;
+    }
+    .pagination li i {
+        font-size: 16px;
+        padding-top: 6px
+    }
+    .hint-text {
+        float: left;
+        margin-top: 10px;
+        font-size: 13px;
+    }    
+	/* Custom checkbox */
+	.custom-checkbox {
+		position: relative;
+	}
+	.custom-checkbox input[type="checkbox"] {    
+		opacity: 0;
+		position: absolute;
+		margin: 5px 0 0 3px;
+		z-index: 9;
+	}
+	.custom-checkbox label:before{
+		width: 18px;
+		height: 18px;
+	}
+	.custom-checkbox label:before {
+		content: '';
+		margin-right: 10px;
+		display: inline-block;
+		vertical-align: text-top;
+		background: white;
+		border: 1px solid #bbb;
+		border-radius: 2px;
+		box-sizing: border-box;
+		z-index: 2;
+	}
+	.custom-checkbox input[type="checkbox"]:checked + label:after {
+		content: '';
+		position: absolute;
+		left: 6px;
+		top: 3px;
+		width: 6px;
+		height: 11px;
+		border: solid #000;
+		border-width: 0 3px 3px 0;
+		transform: inherit;
+		z-index: 3;
+		transform: rotateZ(45deg);
+	}
+	.custom-checkbox input[type="checkbox"]:checked + label:before {
+		border-color: #03A9F4;
+		background: #03A9F4;
+	}
+	.custom-checkbox input[type="checkbox"]:checked + label:after {
+		border-color: #fff;
+	}
+	.custom-checkbox input[type="checkbox"]:disabled + label:before {
+		color: #b8b8b8;
+		cursor: auto;
+		box-shadow: none;
+		background: #ddd;
+	}
+	/* Modal styles */
+	.modal .modal-dialog {
+		max-width: 400px;
+	}
+	.modal .modal-header, .modal .modal-body, .modal .modal-footer {
+		padding: 20px 30px;
+	}
+	.modal .modal-content {
+		border-radius: 3px;
+	}
+	.modal .modal-footer {
+		background: #ecf0f1;
+		border-radius: 0 0 3px 3px;
+	}
+    .modal .modal-title {
+        display: inline-block;
+    }
+	.modal .form-control {
+		border-radius: 2px;
+		box-shadow: none;
+		border-color: #dddddd;
+	}
+	.modal textarea.form-control {
+		resize: vertical;
+	}
+	.modal .btn {
+		border-radius: 2px;
+		min-width: 100px;
+	}	
+	.modal form label {
+		font-weight: normal;
+	}	
